Add folder view fix-1

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -10,6 +10,7 @@
     },
     "plugins": ["prettier"],
     "rules": {
+        "no-underscore-dangle": "off",
         "import/extensions": ["error", "ignorePackages", { "js": "always" }]
     }
 }
